# RoboFEI-HT_2022_SOFTWARE

./: .gitignore  README.md  comandos.sh  comandos.txt  terminal.txt
GC/install/: local_setup.sh  setup.sh
GC/log/: latest_build
action/Data/: README.md
action/GUIcontrol/: README.md  controlRobot.py  openglpy.py  (+2 more)
action/src/control/: CMakeLists.txt  package.xml
action/src/control/backup/: GaitMove.cpp  MotionManager.cpp  MotionManager.hpp
action/src/control/include/: CM730.h  GaitMove.hpp  MX28.h  MotionManager.cpp  MotionManager.h  MotionStatus.h  Point.h  QuadraticStateTransform.h  blackboard.h  cmd_process.cpp  minIni.h
action/src/control/install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: package.zsh
action/src/control/launch/: action.launch.py  dynamixel_sdk_examples.launch.py
action/src/control/src/: MotionManager.cpp  Walking.cpp  control.cpp  main.cpp  minimal_pub.cpp
action/src/control/src/motion/: MotionManager.cpp
action/src/control/src/motion/modules/: Walking.cpp
action/src/dynamixel_sdk_examples/: CMakeLists.txt
action/src/dynamixel_sdk_examples/include/: JointData.h  LinuxDARwIn.h  MX28.h  Makefile  minIni.c
action/src/dynamixel_sdk_examples/log/: latest_build
action/src/dynamixel_sdk_examples/src/: MotionManager.cpp  cmd_process.cpp  main.cpp
decision_pkg/src/custom_interfaces/: package.xml
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: compile.sh  control.sh  decision.sh  gamecontroller.sh  imu.sh  motors.sh  vision.sh
src/control/: CMakeLists.txt  package.xml
src/control/Data/: config.ini  h.ini
src/control/include/: DARwIn.h  GaitMove.hpp  MX28.h  MotionManager.h  MotionModule.h  Walking.h
src/control/launch/: action.launch.py
src/control/src/: LinuxCM730.cpp  client.cpp  control.cpp  dec.cpp  motion_teste.cpp  teste.cpp  teste_client.cpp
src/control/src/action_editor/: cmd_process.cpp
src/control/src/math/: Point.cpp
src/control/src/motion/: JointData.cpp  MotionManager.cpp
src/control/src/motion/modules/: Walking.cpp
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/action/: Control.action
src/custom_interfaces/msg/: Decision.msg  Localization.msg  NeckPosition.msg  SetPosition.msg  SetPosition_original.msg  Walk.msg
src/custom_interfaces/srv/: GetPosition.srv
src/robotis_ws/src/dynamixel_sdk_examples/: CMakeLists.txt  package.xml
src/robotis_ws/src/dynamixel_sdk_examples/include/: read_write_node.hpp  read_write_node_original.hpp
src/robotis_ws/src/dynamixel_sdk_examples/launch/: dynamixel_sdk_examples.launch.py
src/robotis_ws/src/dynamixel_sdk_examples/src/: 12_motores.txt  CHUTE_FINAL_DIREITO_LARC.cpp  CHUTE_FINAL_ESQUERDO_LARC.cpp  Untitled-1.cpp  Untitled-2.cpp  Untitled-3.cpp  Untitled-4.cpp  apenas_1_motor.cpp  byebye.cpp  chute.cpp  minimal_pub.cpp  new_thauzinho.cpp  read_write_node.cpp  read_write_node_original.cpp
src/start/: CMakeLists.txt  package.xml
src/start/launch/: start.launch.py
src/um7/src/: CMakeLists.txt  package.xml
src/um7/src/include/um7/: um7.h
src/um7/src/um7/: main.cpp
um7/: CMakeLists.txt
um7/install/: local_setup.sh  setup.sh
um7/install/serial/include/serial/: serial.h  v8stdint.h
um7/install/serial/share/ament_index/resource_index/package_run_dependencies/: serial
um7/install/serial/share/ament_index/resource_index/parent_prefix_path/: serial
um7/install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
um7/install/serial/share/serial/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  serialConfig-version.cmake  serialConfig.cmake
um7/install/serial/share/serial/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
um7/install/um7/include/um7/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
um7/install/um7/include/um7/srv/: reset.h  reset.hpp
um7/install/um7/include/um7/srv/detail/: reset__builder.hpp  reset__functions.h  reset__rosidl_typesupport_fastrtps_c.h  reset__rosidl_typesupport_fastrtps_cpp.hpp  reset__rosidl_typesupport_introspection_c.h  reset__rosidl_typesupport_introspection_cpp.hpp  reset__struct.h  reset__struct.hpp  reset__traits.hpp  reset__type_support.h
um7/install/um7/lib/um7/: um7_node
um7/install/um7/share/ament_index/resource_index/package_run_dependencies/: um7
um7/install/um7/share/ament_index/resource_index/parent_prefix_path/: um7
um7/install/um7/share/ament_index/resource_index/rclcpp_components/: um7
um7/install/um7/share/ament_index/resource_index/rosidl_interfaces/: um7
um7/install/um7/share/um7/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
um7/install/um7/share/um7/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  um7Config-version.cmake  um7Config.cmake
um7/install/um7/share/um7/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
um7/install/um7/share/um7/srv/: Reset.idl  Reset.srv  Reset_Request.msg  Reset_Response.msg
um7/log/: latest_build
um7/src/: comms.cpp
um7/src/um7/: main.cpp
walk_test/src/control/: CMakeLists.txt
walk_test/src/control/Data/: config.ini
walk_test/src/control/include/: Kinematics.h  LinuxMotionTimer.h  MotionManager.h  ReadConfig.hpp  cmd_process.h
walk_test/src/control/install/: setup.sh
walk_test/src/control/src/: control.cpp  dec.cpp
walk_test/src/control/src/action_editor/: cmd_process.cpp  main.cpp
walk_test/src/control/src/motion/: MotionManager.cpp
walk_test/src/control/src/motion/modules/: Action.cpp  Walking.cpp
(+1585 files in other folders)
