<?xml version="1.0"?>
<package format="3">
  <name>start</name>
  <version>0.0.0</version>
  <description>ROS 2 pkg</description>
  <license>Apache 2.0</license>
  <author email="robofei@todo.todo">robofei</author>
  <maintainer email="robofei@todo.todo">robofei</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>control</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
