<?xml version="1.0"?>
<package format="3">
  <name>custom_interfaces</name>
  <version>3.7.40</version>
  <description>ROS2 custom interface </description>
  <maintainer email="willson@robotis.com">willson</maintainer>
  <license>Apache 2.0</license>
  <author email="willson@robotis.com">Will Son</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>