<?xml version="1.0"?>
<package format="3">
  <name>um7</name>
  <version>0.0.6</version>
  <description>The um7 package provides a C++ implementation of the CH Robotics serial protocol, and a
    corresponding ROS node for publishing standard ROS orientation topics from a UM7.
  </description>

  <maintainer email="dgmiller@ncsu.edu">Daniel Miller</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>  
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="rbirac@cox.net">Alex Brown</author>
  
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/um7</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>serial</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
